@@ -3,6 +3,11 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 2006/04/28
+	* Mobinfo's drop list will use jName rather than Name for drop names.
+	  [Skotlex]
+	* Some cleaning of the ASC_BREAKER code in skill_attack [Skotlex]
+	* Modified skill_attack so that all skills with amotion get their damage
+	  delayed (should fix mob walk-teleport issues) [Skotlex]
 	* Added function stristr to strlib.c, used by mob.c and item_db.c for
 	  case-insensitive seeks. [Skotlex]
 	* Removed the sending of the online guild list when you log-on, may fix the
