@@ -9374,7 +9374,7 @@ int atcommand_mobinfo(
 			if (mob->dropitem[i].nameid <= 0 || (item_data = itemdb_search(mob->dropitem[i].nameid)) == NULL)
 				continue;
 			if (mob->dropitem[i].p > 0) {
-				sprintf(atcmd_output2, " - %s  %02.02f%%", item_data->name, (float)mob->dropitem[i].p / 100);
+				sprintf(atcmd_output2, " - %s  %02.02f%%", item_data->jname, (float)mob->dropitem[i].p / 100);
 				strcat(atcmd_output, atcmd_output2);
 				if (++j % 3 == 0) {
 					clif_displaymessage(fd, atcmd_output);
